<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="zero">0</string>
    <string name="one1">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">x</string>
    <string name="division">/</string>
    <string name="point">.</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="delete">DEL</string>
    <string name="equal">=</string>
    <string name="pos">+/-</string>
    <string name="mod">%</string>
    <string name="MC">MC</string>
    <string name="MR">MR</string>
    <string name="Mpos">M+</string>
    <string name="Mmin">M-</string>
    <string name="clear">C</string>



</resources>
