<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.example.t00064639.calculatorapp.MainActivity"
    android:orientation="vertical"
    android:background="#767676">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="113dp"
        android:background="#fdfdfd">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textViewResult"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textSize="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textAlignment="textEnd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/textViewDisplay"
                android:layout_alignParentRight="false"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="false"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="true" />
        </RelativeLayout>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#212121">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#272727">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/buttonMemClear"
                android:layout_weight="1"
                android:background="#212121"
                android:text="@string/MC"
                android:textSize="25dp"
                android:textColor="#ffffff"
                android:fontFamily="@string/abc_font_family_caption_material"
                android:onClick="click" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/buttonMemRecal"
                android:layout_weight="1"
                android:background="#212121"
                android:text="@string/MR"
                android:textSize="25dp"
                android:textColor="#ffffff"
                android:fontFamily="@string/abc_font_family_caption_material"
                android:onClick="click" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/buttonMemAdd"
                android:layout_weight="1"
                android:background="#212121"
                android:text="M+"
                android:textSize="25dp"
                android:textColor="#ffffff"
                android:fontFamily="@string/abc_font_family_caption_material"
                android:onClick="click" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/buttonMemSub"
                android:layout_weight="1"
                android:background="#272727"
                android:text="@string/Mmin"
                android:textSize="25dp"
                android:textColor="#ffffff"
                android:fontFamily="@string/abc_font_family_caption_material"
                android:onClick="click" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#272727">

            <Button
                android:id="@+id/buttonPosNeg"
                android:layout_column="0"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#212121"
                android:textSize="25dp"
                android:text="@string/pos"
                android:textColor="#ffffff"
                android:fontFamily="@string/abc_font_family_caption_material"
                android:onClick="click" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/buttonMod"
                android:layout_column="1"
                android:layout_weight="1"
                android:background="#212121"
                android:textSize="25dp"
                android:text="@string/mod"
                android:textColor="#ffffff"
                android:fontFamily="@string/abc_font_family_caption_material"
                android:onClick="click" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/buttonDelete"
                android:layout_column="2"
                android:layout_weight="1"
                android:background="#272727"
                android:textSize="25dp"
                android:text="@string/delete"
                android:textColor="#ffffff"
                android:fontFamily="@string/abc_font_family_caption_material"
                android:onClick="click" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/clear"
                android:id="@+id/buttonClear"
                android:layout_weight="1"
                android:background="#272727"
                android:textSize="25dp"
                android:textColor="#ffffff"
                android:fontFamily="@string/abc_font_family_caption_material"
                android:onClick="click" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#272727">

            <Button
                android:text="@string/seven"
                android:id="@+id/button7"
                android:layout_column="0"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#212121"
                android:textSize="25dp"
                android:textColor="#ffffff"
                android:fontFamily="@string/abc_font_family_caption_material"
                android:onClick="click" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/eight"
                android:id="@+id/button8"
                android:layout_column="1"
                android:layout_weight="1"
                android:background="#212121"
                android:textSize="25dp"
                android:textColor="#ffffff"
                android:fontFamily="@string/abc_font_family_caption_material"
                android:onClick="click" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nine"
                android:id="@+id/button9"
                android:layout_column="2"
                android:layout_weight="1"
                android:background="#212121"
                android:textSize="25dp"
                android:textColor="#ffffff"
                android:fontFamily="@string/abc_font_family_caption_material"
                android:onClick="click" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/add"
                android:id="@+id/buttonAdd"
                android:layout_weight="1"
                android:background="#272727"
                android:textSize="25dp"
                android:textColor="#ffffff"
                android:fontFamily="@string/abc_font_family_caption_material"
                android:onClick="click" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#272727">

            <Button
                android:text="@string/four"
                android:id="@+id/button4"
                android:layout_column="0"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#212121"
                android:textSize="25dp"
                android:textColor="#ffffff"
                android:fontFamily="@string/abc_font_family_caption_material"
                android:onClick="click" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/five"
                android:id="@+id/button5"
                android:layout_column="1"
                android:layout_weight="1"
                android:background="#212121"
                android:textSize="25dp"
                android:textColor="#ffffff"
                android:fontFamily="@string/abc_font_family_caption_material"
                android:onClick="click" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/six"
                android:id="@+id/button6"
                android:layout_column="2"
                android:layout_weight="1"
                android:background="#212121"
                android:textSize="25dp"
                android:textColor="#ffffff"
                android:fontFamily="@string/abc_font_family_caption_material"
                android:onClick="click" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/multiply"
                android:id="@+id/buttonMultiply"
                android:layout_weight="1"
                android:background="#272727"
                android:textSize="25dp"
                android:textColor="#ffffff"
                android:fontFamily="@string/abc_font_family_caption_material"
                android:onClick="click" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/one1"
                android:id="@+id/button1"
                android:layout_weight="1"
                android:background="#212121"
                android:textSize="25dp"
                android:textColor="#ffffff"
                android:fontFamily="@string/abc_font_family_caption_material"
                android:onClick="click" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/two"
                android:id="@+id/button2"
                android:layout_weight="1"
                android:background="#212121"
                android:textSize="25dp"
                android:textColor="#ffffff"
                android:fontFamily="@string/abc_font_family_caption_material"
                android:onClick="click" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/three"
                android:id="@+id/button3"
                android:layout_weight="1"
                android:background="#212121"
                android:textSize="25dp"
                android:textColor="#ffffff"
                android:fontFamily="@string/abc_font_family_caption_material"
                android:onClick="click" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/buttonSub"
                android:layout_weight="1"
                android:background="#272727"
                android:textSize="25dp"
                android:text="@string/sub"
                android:textColor="#ffffff"
                android:fontFamily="@string/abc_font_family_caption_material"
                android:onClick="click" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/point"
                android:id="@+id/buttonPoint"
                android:layout_weight="1"
                android:background="#212121"
                android:textSize="25dp"
                android:textColor="#ffffff"
                android:fontFamily="@string/abc_font_family_caption_material"
                android:onClick="click" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/zero"
                android:id="@+id/button0"
                android:layout_weight="1"
                android:background="#212121"
                android:textSize="25dp"
                android:textColor="#ffffff"
                android:fontFamily="@string/abc_font_family_caption_material"
                android:onClick="click" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/equal"
                android:id="@+id/buttonEquals"
                android:layout_weight="1"
                android:background="#212121"
                android:textSize="25dp"
                android:textColor="#ffffff"
                android:fontFamily="@string/abc_font_family_caption_material"
                android:onClick="click" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/buttonDivision"
                android:layout_weight="1"
                android:background="#272727"
                android:text="@string/division"
                android:textSize="25dp"
                android:textColor="#ffffff"
                android:fontFamily="@string/abc_font_family_caption_material"
                android:onClick="click" />
        </TableRow>

    </TableLayout>

</LinearLayout>
